--- a/MusicThingy/MusicThingy.csproj
+++ b/MusicThingy/MusicThingy.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Authors>Eyal Abramovitch</Authors>
+    <Description>A musical theory combination with computers. Hopefully will not cause computers to replace humans.</Description>
   </PropertyGroup>
 
 </Project>
